force-app/main/default/objects/TAC_Project__c/TAC_Project__c.object-meta.xml
<CustomObject>
    <description>Creatathon project linked to a TAC Talent record</description>
    <label>TAC Project</label>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TAC Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>