force-app/main/default/objects/TAC_Project__c/fields/Build_Time_Hours__c.field-meta.xml
<CustomField>
    <fullName>Build_Time_Hours__c</fullName>
    <label>Build Time (Hours)</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>