force-app/main/default/objects/TAC_Project__c/fields/Components_Created__c.field-meta.xml
<CustomField>
    <fullName>Components_Created__c</fullName>
    <label>Components Created</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>