force-app/main/default/objects/TAC_Project__c/fields/Deployed__c.field-meta.xml
<CustomField>
    <fullName>Deployed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deployed</label>
    <type>Checkbox</type>
</CustomField>