force-app/main/default/objects/TAC_Project__c/fields/LinkedIn_Post_URL__c.field-meta.xml
<CustomField>
    <fullName>LinkedIn_Post_URL__c</fullName>
    <label>LinkedIn Post URL</label>
    <type>Url</type>
</CustomField>