force-app/main/default/objects/TAC_Project__c/fields/Live_Demo_Ready__c.field-meta.xml
<CustomField>
    <fullName>Live_Demo_Ready__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Live Demo Ready</label>
    <type>Checkbox</type>
</CustomField>