force-app/main/default/objects/TAC_Project__c/fields/Potential_Use_Cases__c.field-meta.xml
<CustomField>
    <fullName>Potential_Use_Cases__c</fullName>
    <label>Potential Use Cases</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>