force-app/main/default/objects/TAC_Project__c/fields/TAC_Talent__c.field-meta.xml
<CustomField>
    <fullName>TAC_Talent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TAC Talent</label>
    <referenceTo>TAC_Talent__c</referenceTo>
    <relationshipLabel>Projects</relationshipLabel>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>