force-app/main/default/objects/TAC_Project__c/fields/Use_Cases__c.field-meta.xml
<CustomField>
    <fullName>Use_Cases__c</fullName>
    <label>Use Cases (from README)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>