force-app/main/default/objects/TAC_Project__c/fields/Wow_Factor__c.field-meta.xml
<CustomField>
    <fullName>Wow_Factor__c</fullName>
    <label>Wow Factor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
                <default>true</default>
                <label>Low</label>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>