force-app/main/default/objects/TAC_Project__c/fields/Wow_Factor_Detail__c.field-meta.xml
<CustomField>
    <fullName>Wow_Factor_Detail__c</fullName>
    <label>Wow Factor (detail)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>